# test-mbedtls-sgx

./: CMakeLists.txt  README.md
App/: App.cpp  App.h  CMakeLists.txt  test_data.h
App/ocall/: ocall.cpp
Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h
Enclave/common/: log.h  tee_error.h
Enclave/https_client/: https_client.cpp  https_client.h  https_request.cpp  https_request.h  https_response.cpp  https_response.h  https_url.cpp  https_url.h
Enclave/task/: HttpsRequestTask.cpp  HttpsRequestTask.h  Task.cpp  Task.h
